portfolio:edit links

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,16 +55,18 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="/time_tracker/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/time-tracker_preview.png" alt="">
-											<figcaption>Программирование</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/time-tracker_preview.png" alt="">
+										<figcaption>Программирование</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Time tracker</h2>
+										<h2>
+											<a href="/time_tracker/index.html">
+												Time tracker
+											</a>
+										</h2>
 										<p>
 											Небольшое приложение для отслеживания своего денежного ожидания от работы над проектом. Пользователь создает проект, указывает свою почасовую ставку и запускает трекер во время работы. Программа отслеживает время работы и умножает его на почасовую ставку, выводя итоговую сумму. 
 											Для написания этого приложения использовалась связка React + Redux
@@ -76,16 +78,18 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="/steel_press/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/steel-press_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/steel-press_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Steel Press</h2>
+										<h2>
+											<a href="/steel_press/index.html">
+												Steel Press
+											</a>
+										</h2>
 										<p>
 											Верстка красивого шаблона с различной анимацией, обилием слайдеров и с
 											поддержкой адаптивности.
@@ -97,16 +101,18 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="http://taskmanageruseduk.herokuapp.com/">
-										<figure class="portfolio-item-img">
-											<img src="img/task-manager.png" alt="">
-											<figcaption>Программирование</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/task-manager.png" alt="">
+										<figcaption>Программирование</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Task-manager</h2>
+										<h2>
+											<a href="http://taskmanageruseduk.herokuapp.com/">
+												Task Manager
+											</a>
+										</h2>
 										<p>
 											Веб-приложение для организации задач. Пользователи могут быть двух типов: администратор (может добавлять и удалять пользователей) и обычный пользователь.
 											Приложение позволяет создавать задачи с разными параметрами (исполнитель, ответственное лицо, клиент, срок выполнения и приоритет) и менять их статус по обстоятельствам. При создании задачи происходит уведомление всех участников по электронной почте. Каждую задачу можно комментировать. Имеется система авторизации. Использованные технологии: node, express, mongodb, mongoose, react, react-router, passport, jsonwebtoken и nodemailer. Приложение развернуто на сервисе Heroku.
@@ -128,16 +134,18 @@
 						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
-									<a href="/memorisation/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/memorisation_preview.png" alt="">
-											<figcaption >Программирование</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/memorisation_preview.png" alt="">
+										<figcaption >Программирование</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Разработка Memorisation</h2>
+										<h2>
+											<a href="/memorisation/index.html">
+												Разработка Memorisation
+											</a>
+										</h2>
 										<p>Инструмент для облегчения запоминания слов, терминов и любой другой информации с помощью интервального повторения.</p>
 										<p>
 											При создании использовался фреймворк AngularJS, технология local storage и библиотека underscoreJS.						</p>
@@ -148,16 +156,18 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="landitt.html">
-										<figure class="portfolio-item-img">
-											<img src="img/landitt_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/landitt_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Верстка шаблона Landitt</h2>
+										<h2>
+											<a href="landitt.html">
+												Верстка шаблона Landitt
+											</a>
+										</h2>
 										<p>
 											Применение css-фреймворка Bootstrap. Настройка и подклюдчение jQuery-плагинов. Работа над адаптивностью сайта.
 										</p>
@@ -168,16 +178,18 @@
 						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
-									<a href='/marko/index.html'>
-										<figure class="portfolio-item-img">
-											<img src="img/marko_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/marko_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Верстка шаблона Marko</h2>
+										<h2>
+											<a href="/marko/index.html">
+												Верстка шаблона Marko
+											</a>
+										</h2>
 										<p>
 											Применение css-фреймворка Bootstrap. Настройка и подклюдчение jQuery-плагинов. Работа над адаптивностью сайта.
 										</p>
@@ -188,16 +200,18 @@
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
-									<a href="/data_for_business/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/data_for_business_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/data_for_business_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Верстка </h2>
+										<h2>
+											<a href="/data_for_business/index.html">
+												Верстка 
+											</a>
+										</h2>
 										<p>
 											Применение css-фреймворка Bootstrap. Работа над адаптивностью сайта.
 										</p>
@@ -208,16 +222,18 @@
 						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
-									<a href="/velo/index.html">
-										<figure class="portfolio-item-img">
-											<img src="img/velo_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/velo_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Верстка шаблона Velo</h2>
+										<h2>
+											<a href="/velo/index.html">
+												Верстка шаблона Velo
+											</a>
+										</h2>
 										<p>
 											Использовался <a href="https://github.com/CSSSR/csssr-project-template/" target='_blank'>шаблон для верстки csssr</a>, применялась методология БЭМ.
 										</p>
@@ -228,16 +244,18 @@
 						<div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
-									<a href="golden-one.html">
-										<figure href='golden-one.html' class="portfolio-item-img">
-											<img src="img/golden-one_preview.png" alt="">
-											<figcaption>Верстка</figcaption>
-										</figure>
-									</a>
+									<figure class="portfolio-item-img">
+										<img src="img/golden-one_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
-										<h2>Верстка шаблона Golden one</h2>
+										<h2>
+											<a href="golden-one.html">
+												Верстка шаблона Golden one
+											</a>
+										</h2>
 										<p>
 											Использование на практике знаний HTML/CSS. Работа с Photoshop'ом.
 										</p>
