--- a/index.html
+++ b/index.html
@@ -114,19 +114,25 @@
 									<li>
 										<h4>Photoshop</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='34'></div>
+											<div class='percentage' data-percentage='31'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Git</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='40'></div>
+											<div class='percentage' data-percentage='29'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Gulp</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='51'></div>
+											<div class='percentage' data-percentage='35'></div>
+										</div>
+									</li>
+									<li>
+										<h4>Webpack</h4>
+										<div class="progress">
+											<div class='percentage' data-percentage='37'></div>
 										</div>
 									</li>
 								</ul>
@@ -147,13 +153,13 @@
 										</div>
 									</li>
 									<li>
-										<h4>Jade</h4>
+										<h4>Pug</h4>
 										<div class="progress">
 											<div class='percentage' data-percentage='82'></div>
 										</div>
 									</li>
 									<li>
-										<h4>Препроцессоры</h4>
+										<h4>Sass</h4>
 										<div class="progress">
 											<div class='percentage' data-percentage='60'></div>
 										</div>
@@ -161,13 +167,13 @@
 									<li>
 										<h4>CSS</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='82'></div>
+											<div class='percentage' data-percentage='70'></div>
 										</div>
 									</li>
 									<li>
 										<h4>JavaScript</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='63'></div>
+											<div class='percentage' data-percentage='69'></div>
 										</div>
 									</li>
 								</ul>
@@ -188,15 +194,15 @@
 										</div>
 									</li>
 									<li>
-										<h4>Angular</h4>
+										<h4>Redux</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='53'></div>
+											<div class='percentage' data-percentage='36'></div>
 										</div>
 									</li>
 									<li>
 										<h4>jQuery</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='59'></div>
+											<div class='percentage' data-percentage='28'></div>
 										</div>
 									</li>
 								</ul>
