time-tracker:fix:mobile view

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 				<!--============================
 				=            header            =
 				=============================-->
-				<div class="col-md-3">
+				<div class="col-md-3 xs-no-padding">
 					<header class="header">
 						<figure class="header-img">
 							<img src="img/sergeyzubkov.jpg" alt="Sergey Zubkov">
@@ -42,7 +42,7 @@
 				<!--=============================
 				=            content            =
 				==============================-->
-				<div class="col-md-9 nopadding-left">
+				<div class="col-md-9 nopadding-left xs-no-padding">
 					<!--==============================
 					=            location           =
 					===============================-->
@@ -68,7 +68,7 @@
 							<div class="contact-item-con clearfix">
 								<div class="col-md-4 contact-item">
 									<p>Эл. почта:</p>
-									<p><a href="mailto:SVZubkovRU@gmail.com"> svzubkovru@gmail.com</a></p>
+									<p><a href="mailto:svzubkovru@gmail.com"> svzubkovru@gmail.com</a></p>
 									<i class="fa fa-envelope-o"></i>
 								</div>
 								<div class="col-md-4 contact-item">
