--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!--============================
 				=            header            =
 				=============================-->
-				<div class="col-md-3">
+				<div class="col-md-3 xs-no-padding">
 					<header class="header">
 						<figure class="header-img">
 							<img src="img/sergeyzubkov.jpg" alt="Sergey Zubkov">
@@ -43,7 +43,7 @@
 					</header>
 				</div>
 				<!--====  End of header  ====-->
-				<div class="col-md-9 nopadding-left">
+				<div class="col-md-9 nopadding-left xs-no-padding">
 					<!--===========================
 					=            intro            =
 					============================-->
@@ -81,7 +81,7 @@
 										<ul class="intro-info-list">
 											<li>
 												<div class="property">Эл. адрес</div>
-												<div class="value"><a href='mailto:SVZubkovRU@gmail.com'>SVZubkovRU@gmail.com</a></div>
+												<div class="value"><a href='mailto:svzubkovru@gmail.com'>svzubkovru@gmail.com</a></div>
 											</li>
 											<li>
 												<div class="property">Моб. тел.</div>
@@ -114,25 +114,25 @@
 									<li>
 										<h4>Photoshop</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='31'></div>
+											<div class='percentage' data-percentage='66'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Git</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='29'></div>
+											<div class='percentage' data-percentage='70'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Gulp</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='35'></div>
+											<div class='percentage' data-percentage='68'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Webpack</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='37'></div>
+											<div class='percentage' data-percentage='66'></div>
 										</div>
 									</li>
 								</ul>
@@ -190,19 +190,19 @@
 									<li>
 										<h4>React</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='69'></div>
+											<div class='percentage' data-percentage='72'></div>
 										</div>
 									</li>
 									<li>
 										<h4>Redux</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='36'></div>
+											<div class='percentage' data-percentage='67'></div>
 										</div>
 									</li>
 									<li>
 										<h4>jQuery</h4>
 										<div class="progress">
-											<div class='percentage' data-percentage='28'></div>
+											<div class='percentage' data-percentage='33'></div>
 										</div>
 									</li>
 								</ul>
