--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 				<!--============================
 				=            header            =
 				=============================-->
-				<div class="col-md-3">
+				<div class="col-md-3 xs-no-padding">
 					<header class="header">
 						<figure class="header-img">
 							<img src="img/sergeyzubkov.jpg" alt="Sergey Zubkov">
@@ -43,7 +43,7 @@
 				<!--=============================
 				=            content            =
 				==============================-->
-				<div class="col-md-9 nopadding-left">
+				<div class="col-md-9 nopadding-left xs-no-padding">
 				<!--===============================
 				=            portfolio            =
 				================================-->
