portfolio:task-manager change link

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,13 +109,12 @@
 								<div class="col-md-8">
 									<div class="portfolio-des">
 										<h2>
-											<a href="http://taskmanageruseduk.herokuapp.com/">
+											<a href="http://a0532703.xsph.ru">
 												Task Manager
 											</a>
 										</h2>
 										<p>
-											Веб-приложение для организации задач. Пользователи могут быть двух типов: администратор (может добавлять и удалять пользователей) и обычный пользователь.
-											Приложение позволяет создавать задачи с разными параметрами (исполнитель, ответственное лицо, клиент, срок выполнения и приоритет) и менять их статус по обстоятельствам. При создании задачи происходит уведомление всех участников по электронной почте. Каждую задачу можно комментировать. Имеется система авторизации. Использованные технологии: node, express, mongodb, mongoose, react, react-router, passport, jsonwebtoken и nodemailer. Приложение развернуто на сервисе Heroku.
+											SPA для организации задач. Использованные технологии: node, express, mongodb, mongoose, react, react-router, passport, jsonwebtoken и nodemailer.
 										</p>
 										<ul>
 											<li>- Система аунтентификации пользователей(JWT)</li>
@@ -123,10 +122,10 @@
 											<li>- Задаче можно  присвоить исполнителя, ответственного, клиента</li>
 											<li>- Каждому пользователю связанному с задачей приходят уведомления о всех действиях
 											производимых над задачей.</li>
-											<li>- Пользователи могут комментировать задачи</li>
+											<li>- Комментирование задач</li>
 										</ul>
 
-											<p><b> Чтобы войти используйте email - demo@mail.ru, password - demo</b></p>
+											<p><b> Для входа используйте: email - demo@mail.ru, password - demo</b></p>
 									</div>
 								</div>
 							</div>
