portfolio:add yandex2018-shri-entrance-task

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,29 +75,29 @@
 								</div>
 							</div>
 						</div>
-						<div class='portfolio-item'>
+						<!-- <div class="portfolio-item">
 							<div class="row">
 								<div class="col-md-4">
 									<figure class="portfolio-item-img">
-										<img src="img/steel-press_preview.png" alt="">
-										<figcaption>Верстка</figcaption>
+										<img src="img/memorisation_preview.png" alt="">
+										<figcaption >Программирование</figcaption>
 									</figure>
 								</div>
 								<div class="col-md-8">
 									<div class="portfolio-des">
 										<h2>
-											<a href="/steel_press/index.html">
-												Steel Press
+											<a href="/yandex2018-shri-entrance-task/index.html">
+												Яндекс-переговорки
 											</a>
 										</h2>
+										<p>Тестовое задание для школы разработки интерфейсов яндекса</p>
 										<p>
-											Верстка красивого шаблона с различной анимацией, обилием слайдеров и с
-											поддержкой адаптивности.
+											Набор технологий: react, react-router, sqlite, sequelize, graphQL, apollo, node, express						
 										</p>
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class='portfolio-item'>
 							<div class="row">
 								<div class="col-md-4">
@@ -126,6 +126,29 @@
 										</ul>
 
 											<p><b> Для входа используйте: email - demo@mail.ru, password - demo</b></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class='portfolio-item'>
+							<div class="row">
+								<div class="col-md-4">
+									<figure class="portfolio-item-img">
+										<img src="img/steel-press_preview.png" alt="">
+										<figcaption>Верстка</figcaption>
+									</figure>
+								</div>
+								<div class="col-md-8">
+									<div class="portfolio-des">
+										<h2>
+											<a href="/steel_press/index.html">
+												Steel Press
+											</a>
+										</h2>
+										<p>
+											Верстка красивого шаблона с различной анимацией, обилием слайдеров и с
+											поддержкой адаптивности.
+										</p>
 									</div>
 								</div>
 							</div>
